--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>ToDoList</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://webfontworld.github.io/NanumSquare/NanumSquare.css">
   <link rel="stylesheet" href="style.css">
@@ -12,22 +12,21 @@
   <div class="main-container">
     <h1>To Do List</h1>
     <section class="input-area">
-      <input placeholder="오늘의 할일을 적으삼" type="text"/> 
-      <button>add</button>
+      <input placeholder="오늘의 할일을 적으세요" type="text" id="task-input"/> 
+      <button id="add-button">add</button>
+      <button id="delete-all">X</button>
     </section>
-    <section class="task-area">
+    <section class="tab-task-area">
       <div class="tab-area">
+        <div id="under-line"></div>
         <div>See All</div>
         <div>Going On</div>
         <div>Done</div>
       </div>
-        <div class="task">
-          <div>메인 페이지 구현하기</div>
-          <div class="button-area">
-            <button>Done</button>
-            <button>Delete</button>  
-          </div>
-        </div>
+
+      <div id="task-area">
+      </div>
+
     </section>
 
   </div>
