--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ToDoList</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://webfontworld.github.io/NanumSquare/NanumSquare.css">
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/e9a57534d5.js" crossorigin="anonymous"></script>
 </head>
@@ -14,8 +13,8 @@
     <h1>To Do List</h1>
     <section class="input-area">
       <input placeholder="오늘의 할일을 적으세요" type="text" id="task-input"/> 
-      <button id="add-button">add</button>
-      <button id="delete-all">X</button>
+      <button id="add-button"><i class="fa-solid fa-plus"></i></button>
+      <button id="delete-all"><i class="fa-solid fa-x"></i></button>
     </section>
     <section class="tab-task-area">
       <div class="tab-area">
