진행 중 문구 변경

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="tab-area">
         <div id="under-line"></div>
         <div>See All</div>
-        <div>Going On</div>
+        <div>Proceeding</div>
         <div>Done</div>
       </div>
       <div id="task-area">
