tab 에 따라 보여지는 화면 구현

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <section class="tab-task-area">
       <div class="tab-area">
         <div id="under-line"></div>
-        <div>See All</div>
-        <div>Proceeding</div>
-        <div>Done</div>
+        <div id="all">See All</div>
+        <div id="proceeding">Proceeding</div>
+        <div id="done">Done</div>
       </div>
       <div id="task-area">
       </div>
