입력창 placeholder 수정

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
   <div class="main-container">
-    <h1>오늘 할일</h1>
+    <h1>TO DO LIST</h1>
     <section class="input-area">
-      <input placeholder="오늘의 할일을 적으세요" type="text" id="task-input"/> 
+      <input placeholder="기분 좋은 하루 되세요 ! 🖤" type="text" id="task-input"/> 
       <button id="add-button"><i class="fa-solid fa-plus"></i></button>
       <button id="delete-all"><i class="fa-solid fa-x"></i></button>
     </section>
