Feature: URL 복사하는 기능 구현

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button id="modal-close">X</button>
         <div class="modal-content">
           <h4>공유하시겠습니까?</h4>
-          <button>URL 복사하기</button>  
+          <button id="copy-url">URL 복사하기</button>  
         </div>
       </div>
     </div>
