Design: fontawesome 버튼 크기 키움

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <div class="main-container">
     <div class="headline-container">
       <h1>TO DO LIST</h1>
-      <button id="share-modal">공유</button>  
+      <button id="share-modal"><i class="fa-solid fa-arrow-up-from-bracket fa-xl"></i></button>  
     </div>
     <section class="input-area">
       <input placeholder="기분 좋은 하루 되세요 ! 🖤" type="text" id="task-input"/> 
-      <button id="add-button"><i class="fa-solid fa-plus"></i></button>
-      <button id="delete-all"><i class="fa-solid fa-x"></i></button>
+      <button id="add-button"><i class="fa-solid fa-plus fa-xl"></i></button>
+      <button id="delete-all"><i class="fa-solid fa-x fa-xl"></i></button>
     </section>
     <section class="tab-task-area">
       <div class="tab-area">
