Design: modal 창 디자인

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <!--모달창-->
     <div id="modal-container" class="hidden">
       <div id = "modal">
-        <button id="modal-close">X</button>
+        <button id="modal-close"><i class="fa-solid fa-x fa-sm"></i></button>
         <div class="modal-content">
-          <h4>공유하시겠습니까?</h4>
-          <button id="copy-url">URL 복사하기</button>  
+          <div>이 앱을 공유하시겠습니까?</div>
+          <button type="button" class="btn btn-dark" id="copy-url">네, 공유할래요!</button>
         </div>
       </div>
     </div>
